[tool.poetry]
name = "islp"
version = "0.1.0"
description = ""
authors = ["nicklamiller <nicklamiller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
